feat: initialized fronted, generated api and types
