# backend/cmd/docs/swagger.json
@@ -1,19 +1,13 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "A simple task management API built with Go and Gin.",
+        "title": "Task Manager API",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:8080",
+    "basePath": "/",
     "paths": {
         "/tasks": {
             "get": {
@@ -31,7 +25,7 @@ const docTemplate = `{
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.Response"
+                                    "$ref": "#/definitions/task_manager_internal_response.Response"
                                 },
                                 {
                                     "type": "object",
@@ -39,7 +33,7 @@ const docTemplate = `{
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Task"
+                                                "$ref": "#/definitions/model.Task"
                                             }
                                         }
                                     }
@@ -50,7 +44,7 @@ const docTemplate = `{
                     "500": {
                         "description": "Failed to retrieve tasks",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     }
                 }
@@ -74,7 +68,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Task"
+                            "$ref": "#/definitions/model.Task"
                         }
                     }
                 ],
@@ -84,13 +78,13 @@ const docTemplate = `{
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.Response"
+                                    "$ref": "#/definitions/task_manager_internal_response.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.Task"
+                                            "$ref": "#/definitions/model.Task"
                                         }
                                     }
                                 }
@@ -100,13 +94,13 @@ const docTemplate = `{
                     "400": {
                         "description": "Invalid request payload",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     },
                     "500": {
                         "description": "Failed to create task",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     }
                 }
@@ -137,13 +131,13 @@ const docTemplate = `{
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.Response"
+                                    "$ref": "#/definitions/task_manager_internal_response.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.Task"
+                                            "$ref": "#/definitions/model.Task"
                                         }
                                     }
                                 }
@@ -153,7 +147,7 @@ const docTemplate = `{
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     }
                 }
@@ -184,7 +178,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Task"
+                            "$ref": "#/definitions/model.Task"
                         }
                     }
                 ],
@@ -194,13 +188,13 @@ const docTemplate = `{
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.Response"
+                                    "$ref": "#/definitions/task_manager_internal_response.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.Task"
+                                            "$ref": "#/definitions/model.Task"
                                         }
                                     }
                                 }
@@ -210,19 +204,19 @@ const docTemplate = `{
                     "400": {
                         "description": "Invalid request payload",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     },
                     "500": {
                         "description": "Failed to update task",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     }
                 }
@@ -249,19 +243,19 @@ const docTemplate = `{
                     "204": {
                         "description": "Task deleted successfully",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     },
                     "404": {
                         "description": "Task not found",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     },
                     "500": {
                         "description": "Failed to delete task",
                         "schema": {
-                            "$ref": "#/definitions/response.Response"
+                            "$ref": "#/definitions/task_manager_internal_response.Response"
                         }
                     }
                 }
@@ -269,10 +263,27 @@ const docTemplate = `{
         }
     },
     "definitions": {
-        "models.Task": {
-            "type": "object"
+        "model.Task": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/model.TaskStatus"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
         },
-        "models.TaskStatus": {
+        "model.TaskStatus": {
             "type": "string",
             "enum": [
                 "Pending",
@@ -283,7 +294,7 @@ const docTemplate = `{
                 "StatusCompleted"
             ]
         },
-        "response.Response": {
+        "task_manager_internal_response.Response": {
             "type": "object",
             "properties": {
                 "data": {},
@@ -296,22 +307,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:8080",
-	BasePath:         "/",
-	Schemes:          []string{},
-	Title:            "Task Manager API",
-	Description:      "A simple task management API built with Go and Gin.",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
